--- a/pom.xml
+++ b/pom.xml
@@ -109,6 +109,10 @@
             <groupId>org.hzero.boot</groupId>
             <artifactId>hzero-boot-message</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.hzero.boot</groupId>
+            <artifactId>hzero-boot-scheduler</artifactId>
+        </dependency>
 
     </dependencies>
 
