--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -100,5 +100,5 @@ logging:
     org.hzero: debug
 #hzero:
 #  scheduler:
-#    executor-code: DEMO-47837
+#    executor-code: DEMO-EXEC-47837
 #    auto-register: true
