[ADD] add application

--- a/pom.xml
+++ b/pom.xml
@@ -101,6 +101,10 @@
             <scope>test</scope>
         </dependency>
         <dependency>
+            <groupId>org.hzero.boot</groupId>
+            <artifactId>hzero-boot-report</artifactId>
+        </dependency>
+        <dependency>
             <groupId>cglib</groupId>
             <artifactId>cglib-nodep</artifactId>
             <scope>test</scope>
@@ -113,6 +117,17 @@
             <groupId>org.hzero.boot</groupId>
             <artifactId>hzero-boot-scheduler</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.hzero.boot</groupId>
+            <artifactId>hzero-boot-import</artifactId>
+        </dependency>
+
+
+<!--        workflow dependency-->
+<!--        <dependency>-->
+<!--            <groupId>org.hzero.boot</groupId>-->
+<!--            <artifactId>hzero-boot-workflow</artifactId>-->
+<!--        </dependency>-->
 
     </dependencies>
 
