--- a/pom.xml
+++ b/pom.xml
@@ -121,6 +121,11 @@
             <groupId>org.hzero.boot</groupId>
             <artifactId>hzero-boot-import</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.hzero.boot</groupId>
+            <artifactId>hzero-boot-workflow</artifactId>
+            <version>1.10.1.RELEASE</version>
+        </dependency>
 
 
 <!--        workflow dependency-->
