--- a/pom.xml
+++ b/pom.xml
@@ -12,9 +12,9 @@
 <!--        <version>1.11.0.RELEASE</version>-->
     </parent>
     <groupId>com.hand.todo</groupId>
-    <artifactId>demo</artifactId>
+    <artifactId>demo-47837</artifactId>
     <version>1.0.0-snapshot</version>
-    <name>demo</name>
+    <name>demo-47837</name>
 
     <dependencies>
         <!-- hzero starter -->
@@ -96,6 +96,12 @@
             <scope>test</scope>
         </dependency>
         <dependency>
+            <groupId>org.hzero.boot</groupId>
+            <artifactId>hzero-apaas-common</artifactId>
+            <version>2.8.0.RELEASE</version>
+        </dependency>
+
+        <dependency>
             <groupId>org.spockframework</groupId>
             <artifactId>spock-spring</artifactId>
             <scope>test</scope>
@@ -149,6 +155,10 @@
             <groupId>org.hzero.starter</groupId>
             <artifactId>hzero-starter-redis</artifactId>
         </dependency>
+<!--        <dependency>-->
+<!--            <groupId>org.hzero</groupId>-->
+<!--            <artifactId>hzero-platform-saas</artifactId>-->
+<!--        </dependency>-->
 <!--        workflow dependency-->
 <!--        <dependency>-->
 <!--            <groupId>org.hzero.boot</groupId>-->
