--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,9 +1,9 @@
 spring:
   application:
-    name: Hand-Order-47837
+    name: demo-47837
   datasource:
-    url: ${SPRING_DATASOURCE_URL:jdbc:mysql://db.hzero.com.cn:3306/hsop_application_dev?useUnicode=true&characterEncoding=utf-8&useSSL=false}
-#    url: ${SPRING_DATASOURCE_URL:jdbc:mysql://172.22.4.113:3306/hzero_train202411?useUnicode=true&characterEncoding=utf-8&useSSL=false}
+#    url: ${SPRING_DATASOURCE_URL:jdbc:mysql://db.hzero.com.cn:3306/hsop_application_dev?useUnicode=true&characterEncoding=utf-8&useSSL=false}
+    url: ${SPRING_DATASOURCE_URL:jdbc:mysql://172.22.4.113:3306/hzero_train202411?useUnicode=true&characterEncoding=utf-8&useSSL=false}
     username: ${SPRING_DATASOURCE_USERNAME:hzero}
     password: ${SPRING_DATASOURCE_PASSWORD:hzero}
     hikari:
@@ -99,6 +99,7 @@ logging:
     org.apache.ibatis: debug
     io.choerodon: debug
     org.hzero: debug
+    com.hand.demo: debug
 #hzero:
 #  scheduler:
 #    executor-code: DEMO-EXEC-47837
